# 90ci

./: .gitignore  Cargo.toml  README.md  TODO  TODO.md  package-lock.json  package.json  pnpm-lock.yaml
.claude/: CLAUDE.md  settings.json
.claude/agents/: dev-front-end.md  dev-rust.md  reviewer-front-end.md  reviewer-rust.md
.claude/skills/stage-dev/: SKILL.md
.claude/skills/w/: SKILL.md
.github/workflows/: deploy.yml
DOCS/: CANDIDATE_RULES.md  IMPLEMENTATION_PLAN.md  INDEX.md  MAP.md  deploy-github-pages.md
DOCS/PRD/: 90ci-web-calculator.md  v1-acceptance.md
DOCS/architecture/: frontend.md  overview.md  toolchain.md  wasm-module.md
crates/core/: Cargo.toml
crates/core/src/: lib.rs
crates/core/tests/: simple.rs
crates/wasm/: Cargo.toml  webdriver.json
crates/wasm/src/: lib.rs
crates/wasm/tests/: boundary.rs
design/version-1/: README.md
design/version-1/project/: .thumbnail  90ci Calculator - Spreadsheet.html  90ci Calculator - Wireframes.html  90ci Hi-Fi Directions.html
design/version-1/project/designs/: 01-spreadsheet.html  (+3 more)
scripts/: build-wasm.sh
src/: lib.rs
tests/: simple.rs
web/: index.html  package.json  playwright.config.ts  pnpm-lock.yaml  tsconfig.json  vite.config.ts
web/e2e/: release-smoke.spec.ts
web/src/: App.test.tsx  App.tsx  model.ts  validation.test.ts  validation.ts
web/src/components/: A11y.test.tsx  CIHero.tsx  ErrorUX.test.tsx  ModelEditor.test.tsx  ModelEditor.tsx  OutputChart.test.tsx  OutputChart.tsx  ResultPanel.tsx  Sparkline.tsx  TopBar.tsx
web/src/hooks/: useNinetyCi.ts
web/src/styles/: app.css
(+1 files in other folders)
